--- a/index.html
+++ b/index.html
@@ -7,7 +7,10 @@
     <!-- PWA Meta Tags -->
     <meta name="theme-color" content="#09090b" />
     <meta name="apple-mobile-web-app-capable" content="yes" />
-    <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
+    <meta
+      name="apple-mobile-web-app-status-bar-style"
+      content="black-translucent"
+    />
     <meta name="apple-mobile-web-app-title" content="Termix" />
     <link rel="apple-touch-icon" href="/icons/512x512.png" />
     <link rel="manifest" href="/manifest.json" />
